tests/should_fail/wrong_arity.luma
var foo = fn(x: Number) do
  x
end
foo()
